--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,16 @@ gold: '#d4af37'
 <div id="hijri-date"></div>
 </section>
 
-
+<section class="p-4 bg-white rounded-xl shadow m-4">
+<h2 class="text-lg font-bold text-islamic">⏰ Alarm Ramadhan</h2>
+<label class="flex items-center gap-2 mt-2">
+<input type="checkbox" id="alarm-sahur" /> Alarm Sahur
+</label>
+<label class="flex items-center gap-2 mt-2">
+<input type="checkbox" id="alarm-imsak" /> Alarm Imsak
+</label>
+</section>
+  
 <section id="ramadhan" class="hidden"></section>
 
 
