--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,9 @@ gold: '#d4af37'
 </section>
   
 <section id="ramadhan" class="hidden"></section>
+<!-- AUDIO (JANGAN DIHAPUS) -->
+<audio id="audio-sahur" src="/public/audio/sahur.mp3" preload="auto"></audio>
+<audio id="audio-adzan" src="/public/audio/adzan.mp3" preload="auto"></audio>
 
 
 <script src="app.js"></script>
