--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,19 @@ gold: '#d4af37'
 <audio id="audio-sahur" src="/public/audio/sahur.mp3" preload="auto"></audio>
 <audio id="audio-adzan" src="/public/audio/adzan.mp3" preload="auto"></audio>
 
+<section class="p-4 bg-white rounded-xl shadow m-4">
+  <h2 class="text-lg font-bold text-islamic">⏰ Alarm Ramadhan</h2>
+
+  <label class="flex items-center gap-2 mt-3">
+    <input type="checkbox" id="alarm-sahur">
+    Alarm Sahur
+  </label>
+
+  <label class="flex items-center gap-2 mt-2">
+    <input type="checkbox" id="alarm-imsak">
+    Alarm Imsak
+  </label>
+</section>
 
 <script src="app.js"></script>
 </body>
