--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,6 @@ gold: '#d4af37'
   </label>
 </section>
 
-<script src="app.js"></script>
+<script type="module" src="./app.js"></script>
 </body>
 </html>
