--- a/index.html
+++ b/index.html
@@ -55,6 +55,24 @@
       <input type="checkbox" id="alarm-imsak">
       Alarm Imsak
     </label>
+
+    <!-- KARTU KALENDER -->
+<div class="card">
+  <h3>📅 Kalender Hari Ini</h3>
+
+  <p>🗓 Masehi :
+    <span id="masehi">-</span>
+  </p>
+
+  <p>🌙 Hijriah :
+    <span id="hijriah">-</span>
+  </p>
+
+  <p>🎌 Jepang :
+    <span id="jepang">-</span>
+  </p>
+</div>
+
   </section>
 
   <!-- AUDIO -->
