--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
   <audio id="audio-adzan" src="../public/audio/adzan.mp3" preload="auto"></audio>
 
   <!-- JS -->
-  <script type="module" src="./app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
