--- a/index.html
+++ b/index.html
@@ -56,27 +56,20 @@
       Alarm Imsak
     </label>
 
-    <!-- KARTU KALENDER -->
-<div class="card">
-  <h3>📅 Kalender Hari Ini</h3>
-
-  <p>🗓 Masehi :
-    <span id="masehi">-</span>
-  </p>
-
-  <p>🌙 Hijriah :
-    <span id="hijriah">-</span>
-  </p>
-
-  <p>🎌 Jepang :
-    <span id="jepang">-</span>
-  </p>
+  <!-- KALENDER HARI INI -->
+<div class="bg-white rounded-xl shadow p-4 mt-4">
+  <h3 class="font-bold mb-2">📅 Kalender Hari Ini</h3>
+  <p>🗓 Masehi : <span id="masehi">-</span></p>
+  <p>🌙 Hijriah : <span id="hijriah">-</span></p>
+  <p>🎌 Jepang : <span id="jepang">-</span></p>
 </div>
+
 <!-- KALENDER MASEHI -->
-<div class="card">
-  <h3>📆 Kalender Masehi</h3>
+<div class="bg-white rounded-xl shadow p-4 mt-4">
+  <h3 class="font-bold mb-2">📆 Kalender Masehi</h3>
   <div id="kalender-masehi" class="kalender"></div>
 </div>
+
 
   </section>
 
