--- a/index.html
+++ b/index.html
@@ -66,10 +66,17 @@
 </div>
 
 <!-- KALENDER MASEHI -->
+<!-- KALENDER MASEHI -->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
-  <h3 class="font-bold mb-2">📆 Kalender Masehi</h3>
+  <div class="flex items-center justify-between mb-3">
+    <button id="prevMonth" class="px-3 py-1 rounded bg-slate-200">◀</button>
+    <h3 id="monthTitle" class="font-bold text-center"></h3>
+    <button id="nextMonth" class="px-3 py-1 rounded bg-slate-200">▶</button>
+  </div>
+
   <div id="kalender-masehi" class="kalender"></div>
 </div>
+
 
 
   </section>
