--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jadwal Shalat & Kalender Islam</title>
 
-  <!-- Tailwind CDN -->
+  <!-- Tailwind CDN --->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
   <script>
@@ -76,8 +76,6 @@
 
   <div id="kalender-masehi" class="kalender"></div>
 </div>
-
-
 
   </section>
 
