--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
     <button id="prevMonth" class="px-3 py-1 rounded bg-slate-200">◀</button>
     <h3 id="monthTitle" class="font-bold text-center"></h3>
     <button id="nextMonth" class="px-3 py-1 rounded bg-slate-200">▶</button>
-  </div>
+       <!-- INI WAJIB ADA -->
+    <h3 id="monthTitle" class="font-bold text-center"></h3>
+     <button id="nextMonth" class="px-3 py-1 rounded bg-slate-200">▶</button>
+   </div>
 
   <div id="kalender-masehi" class="kalender"></div>
 </div>
