--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
   <p>🎌 Jepang : <span id="jepang">-</span></p>
 </div>
 
-<!-- KALENDER MASEHI -->
+
 <!-- KALENDER MASEHI -->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
   <div class="flex items-center justify-between mb-3">
     <button id="prevMonth" class="px-3 py-1 rounded bg-slate-200">◀</button>
     <h3 id="monthTitle" class="font-bold text-center"></h3>
+    <p id="ramadhanInfo" class="text-center text-sm text-green-700 font-semibold mb-2 hidden"></p>
+
     <button id="nextMonth" class="px-3 py-1 rounded bg-slate-200">▶</button>
        <!-- INI WAJIB ADA -->
     <h3 id="monthTitle" class="font-bold text-center"></h3>
