--- a/index.html
+++ b/index.html
@@ -68,17 +68,26 @@
 
 <!-- KALENDER MASEHI -->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
-  <div class="flex items-center justify-between mb-3">
-    <button id="prevMonth" class="px-3 py-1 rounded bg-slate-200">◀</button>
-    <h3 id="monthTitle" class="font-bold text-center"></h3>
-    <p id="ramadhanInfo" class="text-center text-sm text-green-700 font-semibold mb-2 hidden"></p>
 
-    <!-- INI WAJIB ADA -->
-    <h3 id="monthTitle" class="font-bold text-center"></h3>
-     <button id="nextMonth" class="px-3 py-1 rounded bg-slate-200">▶</button>
-   </div>
+  <!-- WRAPPER CENTER -->
+  <div class="calendar-wrapper">
 
-  <div id="kalender-masehi" class="kalender"></div>
+    <!-- HEADER NAVIGASI -->
+    <div class="calendar-nav">
+      <button id="prevMonth" class="nav-btn">◀</button>
+
+      <div class="nav-title">
+        <h3 id="monthTitle"></h3>
+        <p id="ramadhanInfo" class="hidden"></p>
+      </div>
+
+      <button id="nextMonth" class="nav-btn">▶</button>
+    </div>
+
+    <!-- GRID KALENDER -->
+    <div id="kalender-masehi" class="kalender"></div>
+
+  </div>
 </div>
 
   </section>
