--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <button id="prevMonth" class="nav-btn">◀</button>
 
       <div class="nav-title">
-        <h3 id="monthTitle"></h3>
-        <p id="ramadhanInfo" class="hidden"></p>
+        <div id="monthTitle">Januari 2026</div>
+        <div id="ramadhanInfo" class="hidden"></div>
       </div>
 
       <button id="nextMonth" class="nav-btn">▶</button>
