--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       Alarm Imsak
     </label>
 
-  <!-- KALENDER HARI INI -->
+  <!-- KALENDER HARI INI --->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
   <h3 class="font-bold mb-2">📅 Kalender Hari Ini</h3>
   <p>🗓 Masehi : <span id="masehi">-</span></p>
