--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="bg-white rounded-xl shadow p-4 mt-4">
   <h3 class="font-bold mb-2">📅 Kalender Hari Ini</h3>
   <p>🗓 Masehi : <span id="masehi">-</span></p>
-  <p>🌙 Hijriah : <span id="hijriah">-</span></p>
+  <p>🌙<span id="hijriah">-</span></p>
   <p>🎌 Jepang : <span id="jepang">-</span></p>
 </div>
 
