--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
   <p>🌙 <span id="hijriah">-</span></p>
   <p>🎌 Jepang : <span id="jepang">-</span></p>
 </div>
+    
+<!-- PILIH KOTA -->
+<div class="bg-white rounded-xl shadow p-4 mt-4">
+  <h3 class="font-bold mb-2">🏙️ Pilih Kota</h3>
+
+  <select id="selectCity" class="w-full border rounded p-2">
+    <option value="">-- Pilih Kota --</option>
+    <option value="jakarta">Jakarta</option>
+    <option value="bandung">Bandung</option>
+    <option value="surabaya">Surabaya</option>
+    <option value="semarang">Semarang</option>
+    <option value="yogyakarta">Yogyakarta</option>
+    <option value="medan">Medan</option>
+    <option value="makassar">Makassar</option>
+  </select>
+</div>
 
 
 <!-- KALENDER MASEHI -->
