--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
     <option value="yogyakarta">Yogyakarta</option>
     <option value="medan">Medan</option>
     <option value="makassar">Makassar</option>
+    <option value="bekasi">Bekasi</option>
+<option value="cirebon">Cirebon</option>
+<option value="bogor">Bogor</option>
+<option value="depok">Depok</option>
+<option value="tasikmalaya">Tasikmalaya</option>
+<option value="malang">Malang</option>
+<option value="denpasar">Denpasar</option>
+<option value="jayapura">Jayapura</option>
+
   </select>
 </div>
 
