--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
       <input type="checkbox" id="alarm-imsak">
       Alarm Imsak
     </label>
+    
+<button id="testAlarm"
+  class="mt-3 w-full bg-islamic text-white py-2 rounded">
+  🔊 Tes Bunyi Alarm
+</button>
 
   <!-- KALENDER HARI INI --->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
