--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
   </section>
 
   <!-- AUDIO -->
- <audio id="audio-sahur" src="./audio/sahur.mp3"></audio>
-<audio id="audio-adzan" src="./audio/adzan.mp3"></audio>
+<audio id="audio-sahur" src="./public/audio/sahur.mp3" preload="auto"></audio>
+<audio id="audio-adzan" src="./public/audio/adzan.mp3" preload="auto"></audio>
 
   <!-- POPUP DETAIL TANGGAL -->
 <div id="popupTanggal"
