--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
   <!-- ALARM -->
   <section class="p-4 bg-white rounded-xl shadow m-4">
     <h2 class="text-lg font-bold text-islamic">⏰ Alarm Ramadhan</h2>
+    
+  <!-- PILIH BUNYI ALARM --->   
+<div class="mt-3">
+  <label class="font-semibold">🎵 Pilih Bunyi Alarm</label>
+
+  <select id="alarmSound"
+    class="w-full mt-1 p-2 border rounded">
+    <option value="sahur.mp3">Sahur (Standar)</option>
+    <option value="adzan.mp3">Adzan</option>
+    <option value="beep.mp3">Beep Lembut</option>
+    <option value="alarm.mp3">Alarm Keras</option>
+  </select>
+</div>
 
     <label class="flex items-center gap-2 mt-3">
       <input type="checkbox" id="alarm-sahur">
