--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
   </section>
 
   <!-- AUDIO -->
-<audio id="audio-sahur" src="./public/audio/sahur.mp3" preload="auto"></audio>
-<audio id="audio-adzan" src="./public/audio/adzan.mp3" preload="auto"></audio>
+<audio id="alarmAudio" preload="auto"></audio>
 
   <!-- POPUP DETAIL TANGGAL -->
 <div id="popupTanggal"
