--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- KALENDER HARI INI --->
 <div class="bg-white rounded-xl shadow p-4 mt-4">
-  <h3 class="font-bold mb-2">📅 Kalender Hari Ini</h3>
+  <h3 class="font-bold mb-2">Kalender Hari Ini</h3>
   <p>🗓  Masehi : <span id="masehi">-</span></p>
  <p>🌙 Hijriah : <span id="hijriah">-</span></p>
   <p>🎌 Jepang : <span id="jepang">-</span></p>
