--- a/index.html
+++ b/index.html
@@ -158,5 +158,11 @@
 
   <!-- JS -->
   <script src="script.js"></script>
+
+  <footer class="app-footer">
+  <p>© 2026 Manabu Mantappu</p>
+  <p class="footer-sub">Jadwal Shalat & Kalender Islam</p>
+</footer>
+
 </body>
 </html>
