--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
   </select>
 
   <div class="flex gap-2 mt-3">
-    <button id="playMurottal"
-      class="flex-1 bg-islamic text-white py-2 rounded">
-      ▶️ Putar
-    </button>
+    <button id="playMurottal" type="button"
+  class="flex-1 bg-islamic text-white py-2 rounded">
+  ▶️ Putar
+</button>
 
-    <button id="stopMurottal"
-      class="flex-1 bg-slate-500 text-white py-2 rounded">
-      ⏹ Stop
-    </button>
+<button id="stopMurottal" type="button"
+  class="flex-1 bg-slate-500 text-white py-2 rounded">
+  ⏹ Stop
+</button>
   </div>
 
   <audio id="audio-murottal"></audio>
