--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
 </button>
   </div>
 
+   <div class="flex gap-4 mt-3">
+  <label class="flex items-center gap-2">
+    <input type="checkbox" id="autoNext">
+    Auto next
+  </label>
+
+  <label class="flex items-center gap-2">
+    <input type="checkbox" id="loopSurah">
+    Repeat
+  </label>
+</div>
+
   <audio id="audio-murottal"></audio>
 </section>
    
