--- a/privacy.html
+++ b/privacy.html
@@ -1,36 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <title>Privacy Policy - Jadwal Shalat</title>
 </head>
 <body>
-<h1>Privacy Policy</h1>
 
-<p>Jadwal Shalat respects and protects the privacy of users.</p>
+<h1>Kebijakan Privasi / Privacy Policy</h1>
 
-<p>This application does not collect, store, or share any personal user data.
-The app is designed to display prayer schedules and Islamic calendar information.</p>
+<hr>
 
-<h2>Information Collection and Use</h2>
-<p>This app does not require users to create an account.
-We do not collect personal information such as name, email address, or location.</p>
+<h2>Bahasa Indonesia</h2>
 
-<h2>Third-Party Services</h2>
-<p>The app displays content via WebView.
-Any data processed by external websites is subject to their respective privacy policies.</p>
+<p>
+Aplikasi <b>Jadwal Shalat</b> menghormati dan melindungi privasi pengguna.
+</p>
 
-<h2>Children’s Information</h2>
-<p>This app does not knowingly collect personal data from children under 13.</p>
+<p>
+Aplikasi ini tidak mengumpulkan, menyimpan, atau membagikan data pribadi pengguna.
+Aplikasi ini hanya digunakan untuk menampilkan jadwal shalat dan kalender Islam.
+</p>
 
-<h2>Changes to This Policy</h2>
-<p>This Privacy Policy may be updated from time to time.
-Changes will be posted on this page.</p>
+<h3>Pengumpulan dan Penggunaan Informasi</h3>
+<p>
+Aplikasi ini tidak meminta pengguna untuk membuat akun.
+Kami tidak mengumpulkan informasi pribadi seperti nama, alamat email, atau lokasi pengguna.
+</p>
 
-<h2>Contact</h2>
-<p>If you have questions about this Privacy Policy, contact us at:</p>
+<h3>Layanan Pihak Ketiga</h3>
+<p>
+Aplikasi ini menggunakan WebView untuk menampilkan konten dari situs web.
+Setiap data yang diproses oleh situs web pihak ketiga mengikuti kebijakan privasi masing-masing situs tersebut.
+</p>
+
+<h3>Informasi Anak-anak</h3>
+<p>
+Aplikasi ini tidak secara sengaja mengumpulkan data pribadi dari anak-anak di bawah usia 13 tahun.
+</p>
+
+<h3>Perubahan Kebijakan Privasi</h3>
+<p>
+Kebijakan Privasi ini dapat diperbarui dari waktu ke waktu.
+Setiap perubahan akan ditampilkan pada halaman ini.
+</p>
+
+<h3>Kontak</h3>
+<p>
+Jika Anda memiliki pertanyaan mengenai Kebijakan Privasi ini, silakan hubungi:
+</p>
 <p><b>manabumantappu@gmail.com</b></p>
 
-<p>Last updated: 27 January 2026</p>
+<p>Terakhir diperbarui: 27 Januari 2026</p>
+
+<hr>
+
+<h2>English Version</h2>
+
+<p>
+The <b>Jadwal Shalat</b> application respects and protects user privacy.
+</p>
+
+<p>
+This application does not collect, store, or share any personal user data.
+The app is intended solely to display prayer schedules and Islamic calendar information.
+</p>
+
+<h3>Information Collection and Use</h3>
+<p>
+This app does not require users to create an account.
+We do not collect personal information such as name, email address, or location.
+</p>
+
+<h3>Third-Party Services</h3>
+<p>
+This application uses WebView to display website content.
+Any data processed by third-party websites is subject to their respective privacy policies.
+</p>
+
+<h3>Children’s Information</h3>
+<p>
+This app does not knowingly collect any personal information from children under the age of 13.
+</p>
+
+<h3>Changes to This Privacy Policy</h3>
+<p>
+This Privacy Policy may be updated from time to time.
+Any changes will be posted on this page.
+</p>
+
+<h3>Contact</h3>
+<p>
+If you have any questions about this Privacy Policy, please contact:
+</p>
+<p><b>manabumantappu@gmail.com</b></p>
+
+<p>Last updated: January 27, 2026</p>
+
 </body>
 </html>
