--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@ Setiap perubahan akan ditampilkan pada halaman ini.
 <p>
 Jika Anda memiliki pertanyaan mengenai Kebijakan Privasi ini, silakan hubungi:
 </p>
-<p><b>manabumantappu@gmail.com</b></p>
+<p><b>azishachigo@gmail.com</b></p>
 
 <p>Terakhir diperbarui: 27 Januari 2026</p>
 
@@ -92,7 +92,7 @@ Any changes will be posted on this page.
 <p>
 If you have any questions about this Privacy Policy, please contact:
 </p>
-<p><b>manabumantappu@gmail.com</b></p>
+<p><b>azishachigo@gmail.com</b></p>
 
 <p>Last updated: January 27, 2026</p>
 
